Termine und Einzelheiten aktualisieren

--- a/elektronik.html
+++ b/elektronik.html
@@ -26,7 +26,7 @@
 	</header>
 	<main>
 		<section>
-			<p id="subhead">Löten, verkabeln und isolieren – der Elektronikbereich des Traumwerks bietet Platz zum Experimentieren und Erforschen. Hier ist das Basteln und Konstruieren von interaktiven Gegenständen und Gerätschaften möglich.</p>
+			<p id="subhead">Löten, verkabeln und isolieren – der Elektronikbereich des Traumwerks bietet Platz zum Experimentieren und Erforschen. Hier ist das Basteln und Konstruieren von interaktiven Gegenständen und Gerätschaften möglich. Neben diversen Reparaturarbeiten, werden hier immer wieder Kabel gelötet, oder aber auch ganze Arduino-Projekte realisiert.</p>
 		</section>
 		<section>
 			<h2>Workshops</h2>
@@ -35,6 +35,15 @@
 		<section>
 			<h2>Equipment</h2>
 			<p>In der Elektronik-Ecke steht ausreichend Material zum Löten und Basteln zur Verfügung. Unter anderem bieten wir ein Oszilloskop, eine Lötstation und etliches Feinmechanik-Werkzeug.</p>
+			<p>Wie immer gilt, Verwendung des Equipments erst nach Einschulung!</p>
+			<ul>
+				<li>analoges Oszilloskop</li>
+				<li>Trenntrafo</li>
+				<li>Lötstation</li>
+				<li>Labornetzteil</li>
+				<li>Bauteilsortiment</li>
+			</ul>
+			<p>Wir bitten um eine kleine Spende bei Verbrauch von Kleinmaterialien.</p>
 		</section>
 	</main>
 	<footer>
