--- a/index.html
+++ b/index.html
@@ -165,73 +165,8 @@
 
 			<div class="termin">
 				<div class="datum">
-					<p><strong>19</strong></p>
-					<p>Nov</p>
-				</div>
-				<div class="inhalt">
-					<h3>Offene Werkstatt</h3>
-					<p>Beginn: <strong>17:00</strong> | Leiter*in: <strong>Alina</strong></p>
-					<hr>
-					<p>Komm vorbei, lern uns kennen, und mach gleich was! Während der offenen Werkstatt kannst du unsere Gerätschaften (nach Einschulung!) für dein Projekt nutzen und an deiner Sache weiterbasteln.</p>
-				</div>
-			</div>
-
-			<div class="termin">
-				<div class="datum">
-					<p><strong>26</strong></p>
-					<p>Nov</p>
-				</div>
-				<div class="inhalt">
-					<h3>Offene Werkstatt</h3>
-					<p>Beginn: <strong>17:00</strong> | Leiter*in: <strong>TBA</strong></p>
-					<hr>
-					<p>Komm vorbei, lern uns kennen, und mach gleich was! Während der offenen Werkstatt kannst du unsere Gerätschaften (nach Einschulung!) für dein Projekt nutzen und an deiner Sache weiterbasteln.</p>
-				</div>
-			</div>
-
-			<div class="termin siebdruck">
-				<div class="datum">
-					<p><strong>30</strong></p>
-					<p>Nov</p>
-				</div>
-				<div class="inhalt">
-					<h3>Siebdruckworkshop</h3>
-					<p>Beginn: <strong>16:30</strong> | Leiter*in: <strong>Lorenz</strong></p>
-					<hr>
-					<p>Bereits ausgebucht! <br>Kommt vorbei und lernt die Welt des Siebdrucks kennen! Drucke dein eigenes Motiv im Rahmen dieses Workshops. Dazu bitte das digitalisierte Motiv (im PDF Format) und das zu Bedruckende (z. B. T-Shirt) mitbringen. Ihr könnt aber auch aus einer Vielzahl von Motiven aus unserer Sammlung wählen. Anmeldung per Mail!</p>
-				</div>
-			</div>
-
-			<div class="termin">
-				<div class="datum">
-					<p><strong>3</strong></p>
-					<p>Dez</p>
-				</div>
-				<div class="inhalt">
-					<h3>Offene Werkstatt</h3>
-					<p>Beginn: <strong>17:00</strong> | Leiter*in: <strong>TBA</strong></p>
-					<hr>
-					<p>Komm vorbei, lern uns kennen, und mach gleich was! Während der offenen Werkstatt kannst du unsere Gerätschaften (nach Einschulung!) für dein Projekt nutzen und an deiner Sache weiterbasteln.</p>
-				</div>
-			</div>
-
-			<div class="termin">
-				<div class="datum">
-					<p><strong>10</strong></p>
-					<p>Dez</p>
-				</div>
-				<div class="inhalt">
-					<h3>Offene Werkstatt</h3>
-					<p>Beginn: <strong>17:00</strong> | Leiter*in: <strong>Andreas</strong></p>
-					<hr>
-					<p>Komm vorbei, lern uns kennen, und mach gleich was! Während der offenen Werkstatt kannst du unsere Gerätschaften (nach Einschulung!) für dein Projekt nutzen und an deiner Sache weiterbasteln.</p>
-				</div>
-			</div>
-
-			<div class="termin">
-				<div class="datum">
-					<p><strong>17</strong></p>
-					<p>Dez</p>
+					<p><strong>4</strong></p>
+					<p>Feb</p>
 				</div>
 				<div class="inhalt">
 					<h3>Offene Werkstatt</h3>
@@ -241,16 +176,198 @@
 				</div>
 			</div>
 
+			<div class="termin">
+				<div class="datum">
+					<p><strong>11</strong></p>
+					<p>Feb</p>
+				</div>
+				<div class="inhalt">
+					<h3>Offene Werkstatt</h3>
+					<p>Beginn: <strong>17:00</strong> | Leiter*in: <strong>Steffi</strong></p>
+					<hr>
+					<p>Komm vorbei, lern uns kennen, und mach gleich was! Während der offenen Werkstatt kannst du unsere Gerätschaften (nach Einschulung!) für dein Projekt nutzen und an deiner Sache weiterbasteln.</p>
+				</div>
+			</div>
+
+			<div class="termin">
+				<div class="datum">
+					<p><strong>18</strong></p>
+					<p>Feb</p>
+				</div>
+				<div class="inhalt">
+					<h3>Offene Werkstatt</h3>
+					<p>Beginn: <strong>17:00</strong> | Leiter*in: <strong>Philipp</strong></p>
+					<hr>
+					<p>Komm vorbei, lern uns kennen, und mach gleich was! Während der offenen Werkstatt kannst du unsere Gerätschaften (nach Einschulung!) für dein Projekt nutzen und an deiner Sache weiterbasteln.</p>
+				</div>
+			</div>
+
 			<div class="termin siebdruck">
 				<div class="datum">
-					<p><strong>21</strong></p>
-					<p>Dez</p>
+					<p><strong>22</strong></p>
+					<p>Feb</p>
 				</div>
 				<div class="inhalt">
 					<h3>Siebdruckworkshop</h3>
-					<p>Beginn: <strong>15:00</strong> | Leiter*in: <strong>Paul</strong></p>
+					<p>Beginn: <strong>16:30</strong> | Leiter*in: <strong>Nina</strong></p>
 					<hr>
-					<p>Bereits ausgebucht! <br>Kommt vorbei und lernt die Welt des Siebdrucks kennen! Drucke dein eigenes Motiv im Rahmen dieses Workshops. Dazu bitte das digitalisierte Motiv (im PDF Format) und das zu Bedruckende (z. B. T-Shirt) mitbringen. Ihr könnt aber auch aus einer Vielzahl von Motiven aus unserer Sammlung wählen. Anmeldung per Mail!</p>
+					<p>Kommt vorbei und lernt die Welt des Siebdrucks kennen! Drucke dein eigenes Motiv im Rahmen dieses Workshops. Dazu bitte das digitalisierte Motiv (im PDF Format) und das zu Bedruckende (z. B. T-Shirt) mitbringen. Ihr könnt aber auch aus einer Vielzahl von Motiven aus unserer Sammlung wählen. Anmeldung per Mail! <a class="email"></a> Anmeldung über Facebook ist nicht gültig.</p>
+				</div>
+			</div>
+
+			<div class="termin">
+				<div class="datum">
+					<p><strong>25</strong></p>
+					<p>Feb</p>
+				</div>
+				<div class="inhalt">
+					<h3>Offene Werkstatt</h3>
+					<p>Beginn: <strong>17:00</strong> | Leiter*in: <strong>Aspi</strong></p>
+					<hr>
+					<p>Komm vorbei, lern uns kennen, und mach gleich was! Während der offenen Werkstatt kannst du unsere Gerätschaften (nach Einschulung!) für dein Projekt nutzen und an deiner Sache weiterbasteln.</p>
+				</div>
+			</div>
+
+			<div class="termin">
+				<div class="datum">
+					<p><strong>4</strong></p>
+					<p>Mär</p>
+				</div>
+				<div class="inhalt">
+					<h3>Offene Werkstatt</h3>
+					<p>Beginn: <strong>17:00</strong> | Leiter*in: <strong>Andi</strong></p>
+					<hr>
+					<p>Komm vorbei, lern uns kennen, und mach gleich was! Während der offenen Werkstatt kannst du unsere Gerätschaften (nach Einschulung!) für dein Projekt nutzen und an deiner Sache weiterbasteln.</p>
+				</div>
+			</div>
+
+			<div class="termin">
+				<div class="datum">
+					<p><strong>11</strong></p>
+					<p>Mär</p>
+				</div>
+				<div class="inhalt">
+					<h3>Offene Werkstatt</h3>
+					<p>Beginn: <strong>17:00</strong> | Leiter*in: <strong>Nina</strong></p>
+					<hr>
+					<p>Komm vorbei, lern uns kennen, und mach gleich was! Während der offenen Werkstatt kannst du unsere Gerätschaften (nach Einschulung!) für dein Projekt nutzen und an deiner Sache weiterbasteln.</p>
+				</div>
+			</div>
+
+			<div class="termin">
+				<div class="datum">
+					<p><strong>18</strong></p>
+					<p>Mär</p>
+				</div>
+				<div class="inhalt">
+					<h3>Offene Werkstatt</h3>
+					<p>Beginn: <strong>17:00</strong> | Leiter*in: <strong>Simon</strong></p>
+					<hr>
+					<p>Komm vorbei, lern uns kennen, und mach gleich was! Während der offenen Werkstatt kannst du unsere Gerätschaften (nach Einschulung!) für dein Projekt nutzen und an deiner Sache weiterbasteln.</p>
+				</div>
+			</div>
+
+			<div class="termin">
+				<div class="datum">
+					<p><strong>25</strong></p>
+					<p>Mär</p>
+				</div>
+				<div class="inhalt">
+					<h3>Offene Werkstatt</h3>
+					<p>Beginn: <strong>17:00</strong> | Leiter*in: <strong>Vicky</strong></p>
+					<hr>
+					<p>Komm vorbei, lern uns kennen, und mach gleich was! Während der offenen Werkstatt kannst du unsere Gerätschaften (nach Einschulung!) für dein Projekt nutzen und an deiner Sache weiterbasteln.</p>
+				</div>
+			</div>
+
+			<div class="termin siebdruck">
+				<div class="datum">
+					<p><strong>29</strong></p>
+					<p>Mär</p>
+				</div>
+				<div class="inhalt">
+					<h3>Siebdruckworkshop</h3>
+					<p>Beginn: <strong>15:00</strong> | Leiter*in: <strong>Steffi</strong></p>
+					<hr>
+					<p>Kommt vorbei und lernt die Welt des Siebdrucks kennen! Drucke dein eigenes Motiv im Rahmen dieses Workshops. Dazu bitte das digitalisierte Motiv (im PDF Format) und das zu Bedruckende (z. B. T-Shirt) mitbringen. Ihr könnt aber auch aus einer Vielzahl von Motiven aus unserer Sammlung wählen. Anmeldung per Mail!</p>
+				</div>
+			</div>
+
+			<div class="termin">
+				<div class="datum">
+					<p><strong>1</strong></p>
+					<p>Apr</p>
+				</div>
+				<div class="inhalt">
+					<h3>Offene Werkstatt</h3>
+					<p>Beginn: <strong>17:00</strong> | Leiter*in: <strong>Georg</strong></p>
+					<hr>
+					<p>Komm vorbei, lern uns kennen, und mach gleich was! Während der offenen Werkstatt kannst du unsere Gerätschaften (nach Einschulung!) für dein Projekt nutzen und an deiner Sache weiterbasteln.</p>
+				</div>
+			</div>
+
+			<div class="termin">
+				<div class="datum">
+					<p><strong>8</strong></p>
+					<p>Apr</p>
+				</div>
+				<div class="inhalt">
+					<h3>Offene Werkstatt</h3>
+					<p>Beginn: <strong>17:00</strong> | Leiter*in: <strong>Steffi</strong></p>
+					<hr>
+					<p>Komm vorbei, lern uns kennen, und mach gleich was! Während der offenen Werkstatt kannst du unsere Gerätschaften (nach Einschulung!) für dein Projekt nutzen und an deiner Sache weiterbasteln.</p>
+				</div>
+			</div>
+
+			<div class="termin">
+				<div class="datum">
+					<p><strong>15</strong></p>
+					<p>Apr</p>
+				</div>
+				<div class="inhalt">
+					<h3>Offene Werkstatt</h3>
+					<p>Beginn: <strong>17:00</strong> | Leiter*in: <strong>Annika</strong></p>
+					<hr>
+					<p>Komm vorbei, lern uns kennen, und mach gleich was! Während der offenen Werkstatt kannst du unsere Gerätschaften (nach Einschulung!) für dein Projekt nutzen und an deiner Sache weiterbasteln.</p>
+				</div>
+			</div>
+
+			<div class="termin">
+				<div class="datum">
+					<p><strong>22</strong></p>
+					<p>Apr</p>
+				</div>
+				<div class="inhalt">
+					<h3>Offene Werkstatt</h3>
+					<p>Beginn: <strong>17:00</strong> | Leiter*in: <strong>TBA</strong></p>
+					<hr>
+					<p>Komm vorbei, lern uns kennen, und mach gleich was! Während der offenen Werkstatt kannst du unsere Gerätschaften (nach Einschulung!) für dein Projekt nutzen und an deiner Sache weiterbasteln.</p>
+				</div>
+			</div>
+
+			<div class="termin siebdruck">
+				<div class="datum">
+					<p><strong>26</strong></p>
+					<p>Apr</p>
+				</div>
+				<div class="inhalt">
+					<h3>Siebdruckworkshop</h3>
+					<p>Beginn: <strong>15:00</strong> | Leiter*in: <strong>Vicky</strong></p>
+					<hr>
+					<p>Kommt vorbei und lernt die Welt des Siebdrucks kennen! Drucke dein eigenes Motiv im Rahmen dieses Workshops. Dazu bitte das digitalisierte Motiv (im PDF Format) und das zu Bedruckende (z. B. T-Shirt) mitbringen. Ihr könnt aber auch aus einer Vielzahl von Motiven aus unserer Sammlung wählen. Anmeldung per Mail!</p>
+				</div>
+			</div>
+
+			<div class="termin">
+				<div class="datum">
+					<p><strong>29</strong></p>
+					<p>Apr</p>
+				</div>
+				<div class="inhalt">
+					<h3>Offene Werkstatt</h3>
+					<p>Beginn: <strong>17:00</strong> | Leiter*in: <strong>Simon</strong></p>
+					<hr>
+					<p>Komm vorbei, lern uns kennen, und mach gleich was! Während der offenen Werkstatt kannst du unsere Gerätschaften (nach Einschulung!) für dein Projekt nutzen und an deiner Sache weiterbasteln.</p>
 				</div>
 			</div>
 
@@ -327,6 +444,7 @@
 
 			<div id="side">
 				<div id="team-mitglieder">
+
 					<div class="mitglied">
 						<div class="bild">
 							<img src="assets/bilder/team/nina.jpg" alt="">
@@ -407,6 +525,43 @@
 						<p>Bereiche: <strong>Holz, Elektronik</strong></p>
 						<p>Aspi ist gerne bei Reparaturen behilflich.</p>
 					</div>
+
+					<div class="mitglied">
+						<div class="bild">
+							<img src="assets/bilder/team/generic.jpg" alt="">
+						</div>
+						<h4>Georg</h4>
+						<p>Bereiche: <strong>Holz, Metall</strong></p>
+						<p>Georg ist euch gerne mit Holz- und Metallarbeiten behilflich.</p>
+					</div>
+
+					<div class="mitglied">
+						<div class="bild">
+							<img src="assets/bilder/team/generic.jpg" alt="">
+						</div>
+						<h4>Simon</h4>
+						<p>Bereiche: <strong>Holz</strong></p>
+						<p>Simon ist euch gerne mit Holzarbeiten behilflich.</p>
+					</div>
+
+					<div class="mitglied">
+						<div class="bild">
+							<img src="assets/bilder/team/generic.jpg" alt="">
+						</div>
+						<h4>Annika</h4>
+						<p>Bereiche: <strong>Keramik</strong></p>
+						<p>Annika kennt sich besonders gut mit Töpfer- und Keramikarbeit aus.</p>
+					</div>
+
+					<div class="mitglied">
+						<div class="bild">
+							<img src="assets/bilder/team/generic.jpg" alt="">
+						</div>
+						<h4>Valentin</h4>
+						<p>Bereiche: <strong>Holz, Elektronik</strong></p>
+						<p>Valentin kennt sich besonders gut mit Holz- und Möbelbua aus.</p>
+					</div>
+
 				</div>
 			</div>
 
