--- a/keramik.html
+++ b/keramik.html
@@ -35,7 +35,8 @@
 		</section>
 		<section>
 			<h2>Equipment</h2>
-			<p>Zwei Töpferscheiben und ein Brennofen, sowie reichlich Ton und Werkzeug zum Formen stehen euch im Traumwerk zur Verfügung.</p>
+			<p>Wir haben eine Töpferscheibe; einen programmierbaren, elektrischen Brennofen (derzeit als Leihgabe) und sogar ein paar Glasuren. Den Ton haben wir zur Zeit nicht auf Lager und ist deswegen selber mitzubringen.</p>
+			<p>Pro Brand bitten wir um eine Spende, um die Betriebskosten des Ofens decken zu können. Der Strom und die Abnützung der Heizelemente verursachen Kosten von ungefähr 20 € pro Brand.</p>
 		</section>
 	</main>
 	<footer>
