--- a/metall.html
+++ b/metall.html
@@ -26,15 +26,26 @@
 	</header>
 	<main>
 		<section>
-			<p id="subhead">Sogar für schweres Material sind wir gut ausgestattet. Ob Reperaturen oder selbstgebaute Metall-Werkstücke, wir helfen dir bei der Realisierung deiner Projekte.</p>
+			<p id="subhead">Vom Lastenfahrrad zum Regalgestell, über Kochtopf bishin zur Blechkonstruktion wird im Traumwerk allerlei geschweißt, geflext und gebogen. Ob Reperaturen oder selbstgebaute Metall-Werkstücke, wir helfen dir bei der Realisierung deiner Projekte.</p>
 		</section>
 		<section>
 			<h2>Workshops</h2>
 			<p>Auf Anfrage bieten wir Schweißworkshops an, bei denen du die Grundlagen im Umgang mit dem Material und unserem Equipment lernst.</p>
+
 		</section>
 		<section>
 			<h2>Equipment</h2>
-			<p>Herzstück der Metallwerkstatt ist das Schweißgerät, mit dem sogar einege der Gerätschaften im Traumwerk selbst gebaut wurden. Außerdem haben wir ein großes Lager an Stangen und Blechen.</p>
+			<p>Herzstück der Metallwerkstatt ist das MAG-Schweißgerät, mit dem sogar einege der Gerätschaften im Traumwerk selbst gebaut wurden. Außerdem haben wir ein großes Lager an Stangen und Blechen.</p>
+			<p>Nach erfolgreicher Einschulung kannst du folgendes Equipment verwenden:</p>
+			<ul>
+				<li>MAG Schweißgerät</li>
+				<li>Metallarbeistisch</li>
+				<li>WIG/E Hand-Inverter</li>
+				<li>Modellbauer-Drehbank</li>
+				<li>Lackierkabine</li>
+				<li>diverses Anreiß-Werkzeug</li>
+			</ul>
+			<p>Schutzgas, Flexscheiben und Bohrer sind teuer, deshalb bitten wir um einen entsprechenden Materialbeitrag für Gasverbrauch und Werkzeugverschleiß. 10 Bar Gas kosten uns etwa 5 €, eine Flexscheibe cirka 2 €.</p>
 		</section>
 	</main>
 	<footer>
