Repaircafédatum hinzufügen & Datum color fix
Farbe für’s Repaircafe hinzugefügt.

--- a/index.html
+++ b/index.html
@@ -241,6 +241,18 @@
 				</div>
 			</div>
 
+			<div class="termin repaircafe">
+					<p><strong>9</strong></p>
+					<p>Mär</p>
+				</div>
+				<div class="inhalt">
+					<h3>Repaircafé</h3>
+					<p>Beginn: <strong>10:00</strong> | Leiter*in: <strong>Andi</strong></p>
+					<hr>
+					<p>Repariert ist besser als neu! Siehe <a href="repaircafe-graz.at">Repaircafé</a></p>
+				</div>
+			</div>
+
 			<div class="termin">
 				<div class="datum">
 					<p><strong>11</strong></p>
