--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
 			</div>
 
 			<div class="termin repaircafe">
+				<div class="datum">
 					<p><strong>9</strong></p>
 					<p>Mär</p>
 				</div>
