--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 					<p>Mär</p>
 				</div>
 				<div class="inhalt">
-					<h3>Repaircafé</h3>
+					<h3>Repaircafé Graz</h3>
 					<p>Beginn: <strong>10:00</strong> | Leiter*in: <strong>Andi</strong></p>
 					<hr>
 					<p>Repariert ist besser als neu! Siehe <a href="repaircafe-graz.at">Repaircafé</a></p>
