Korrekturen und Aktualisierungen
– Korrektur Workshopzeit
– Korrektur Darstellung d. Teambilder auf Mobile
– Korrektur der Copyright Zeichen
– Teambild Alttexte hinzufügen
– Aktualisierung des Siebdrucktextes

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 				</div>
 				<div class="inhalt">
 					<h3>Siebdruckworkshop</h3>
-					<p>Beginn: <strong>16:30</strong> | Leiter*in: <strong>Nina</strong></p>
+					<p>Beginn: <strong>15:00</strong> | Leiter*in: <strong>Nina</strong></p>
 					<hr>
 					<p>Kommt vorbei und lernt die Welt des Siebdrucks kennen! Drucke dein eigenes Motiv im Rahmen dieses Workshops. Dazu bitte das digitalisierte Motiv (im PDF Format) und das zu Bedruckende (z. B. T-Shirt) mitbringen. Ihr könnt aber auch aus einer Vielzahl von Motiven aus unserer Sammlung wählen. Anmeldung per Mail! <a class="email"></a> Anmeldung über Facebook ist nicht gültig.</p>
 				</div>
@@ -460,7 +460,7 @@
 
 					<div class="mitglied">
 						<div class="bild">
-							<img src="assets/bilder/team/nina.jpg" alt="">
+							<img src="assets/bilder/team/nina.jpg" alt="Portrait von Nina">
 						</div>
 						<h4>Nina</h4>
 						<p>Bereiche: <strong>Siebdruck, Textil</strong></p>
@@ -469,7 +469,7 @@
 
 					<div class="mitglied">
 						<div class="bild">
-							<img src="assets/bilder/team/steffi.jpg" alt="">
+							<img src="assets/bilder/team/steffi.jpg" alt="Portrait von Steffi">
 						</div>
 						<h4>Steffi</h4>
 						<p>Bereiche: <strong>Siebdruck, Nähen, Holz</strong></p>
@@ -478,7 +478,7 @@
 
 					<div class="mitglied">
 						<div class="bild">
-							<img src="assets/bilder/team/paul.jpg" alt="">
+							<img src="assets/bilder/team/paul.jpg" alt="Portrait von Paul">
 						</div>
 						<h4>Paul</h4>
 						<p>Bereiche: <strong>Siebdruck, Elektronik, Metall, Holz</strong></p>
@@ -487,7 +487,7 @@
 
 					<div class="mitglied">
 						<div class="bild">
-							<img src="assets/bilder/team/andi.jpg" alt="">
+							<img src="assets/bilder/team/andi.jpg" alt="Portrait von Andi">
 						</div>
 						<h4>Andi</h4>
 						<p>Bereiche: <strong>Elektronik</strong></p>
@@ -496,7 +496,7 @@
 
 					<div class="mitglied">
 						<div class="bild">
-							<img src="assets/bilder/team/philipp.jpg" alt="">
+							<img src="assets/bilder/team/philipp.jpg" alt="Portrait von Philipp">
 						</div>
 						<h4>Philipp</h4>
 						<p>Bereiche: <strong>Metall, Elektronik, Holz</strong></p>
@@ -514,7 +514,7 @@
 
 					<div class="mitglied">
 						<div class="bild">
-							<img src="assets/bilder/team/generic.jpg" alt="">
+							<img src="assets/bilder/team/generic.jpg" alt="Portrait Symbolbild">
 						</div>
 						<h4>Lorenz</h4>
 						<p>Bereiche: <strong>Siebdruck, Textil, Holz</strong></p>
@@ -532,7 +532,7 @@
 
 					<div class="mitglied">
 						<div class="bild">
-							<img src="assets/bilder/team/generic.jpg" alt="">
+							<img src="assets/bilder/team/aspi.jpg" alt="Portrait von Aspi">
 						</div>
 						<h4>Aspi</h4>
 						<p>Bereiche: <strong>Holz, Elektronik</strong></p>
@@ -541,7 +541,7 @@
 
 					<div class="mitglied">
 						<div class="bild">
-							<img src="assets/bilder/team/generic.jpg" alt="">
+							<img src="assets/bilder/team/generic.jpg" alt="Portrait Symbolbild">
 						</div>
 						<h4>Georg</h4>
 						<p>Bereiche: <strong>Holz, Metall</strong></p>
@@ -550,7 +550,7 @@
 
 					<div class="mitglied">
 						<div class="bild">
-							<img src="assets/bilder/team/generic.jpg" alt="">
+							<img src="assets/bilder/team/generic.jpg" alt="Portrait Symbolbild">
 						</div>
 						<h4>Simon</h4>
 						<p>Bereiche: <strong>Holz</strong></p>
@@ -559,7 +559,7 @@
 
 					<div class="mitglied">
 						<div class="bild">
-							<img src="assets/bilder/team/generic.jpg" alt="">
+							<img src="assets/bilder/team/generic.jpg" alt="Portrait Symbolbild">
 						</div>
 						<h4>Annika</h4>
 						<p>Bereiche: <strong>Keramik</strong></p>
@@ -568,7 +568,7 @@
 
 					<div class="mitglied">
 						<div class="bild">
-							<img src="assets/bilder/team/generic.jpg" alt="">
+							<img src="assets/bilder/team/generic.jpg" alt="Portrait Symbolbild">
 						</div>
 						<h4>Valentin</h4>
 						<p>Bereiche: <strong>Holz, Elektronik</strong></p>
@@ -643,7 +643,7 @@
 	</main>
 
 	<footer>
-		<p>&copy; 2018</p>
+		<p>&copy; 2019</p>
 		<div class="social">
 			<p><a href="https://www.facebook.com/verein.traumwerk/">Facebook</a></p>
 			<p><a href="https://twitter.com/TraumwerkGraz">Twitter</a></p>
