--- a/siebdruck.html
+++ b/siebdruck.html
@@ -30,10 +30,10 @@
 		</section>
 		<section>
 			<h2>Workshops</h2>
-			<p>Das Traumwerk veranstaltet regelmäßig kostenfreie Workshops, in denen du das Drucken und den Umgang mit unserem Equipment lernen kannst. Nach einem absolvierten Workshop kannst du die Werkstätte auch selbstständig nutzen und im Rahmen einer offenen Werkstatt alleine Drucken.</p>
-			<p>Da das Traumwerk ein gemeinnütziger Verein ist, werden die Workshops kostenlos angeboten. Um die anfallenden Materialkosten decken zu können, bitten wir um einen Materialbeitrag oder eine Spende.</p>
+			<p>Das Traumwerk veranstaltet regelmäßig Workshops, in denen du das Drucken und den Umgang mit unserem Equipment lernen kannst. Nach einem absolvierten Workshop kannst du die Werkstätte auch selbstständig nutzen und im Rahmen einer offenen Werkstatt alleine Drucken.</p>
+			<p>Die regelmäßigen Workshops werden von unserem Team ehrenamtlich veranstaltet. Um die anfallenden Materialkosten decken zu können, bitten wir um einen Materialbeitrag. Spenden sind willkommen.</p>
 			<p>Wir bitten darum, die <strong>zu bedruckenden Materialien selbst mittzubringen!</strong> Das können Textilien oder Papier sein. Wer sein eigenes Motiv drucken möchte, sollte dies am besten als PDF in schwarz-weiß auf einem USB-Stick zum Workshop mitnehmen. Natürlich haben wir aber auch ein reiches Angebot an Motiven in unserer Sammlung, falls ihr noch keines habt.</p>
-			<p>Anmeldung zum Workshop bitte per Mail.</p>
+			<p>Anmeldung zum Workshop bitte per Mail. Für die Vorbereitung der Siebe bitten wir darum, einen Mindestanteil der Materialkosten von 5 € im Vorhinein zu bezahlen. Die Anmeldung ist erst nach Einzahlung gültig.</p>
 		</section>
 		<section>
 			<h2>Equipment</h2>
@@ -50,7 +50,7 @@
 		</section>
 	</main>
 	<footer>
-		<p>&copy; 2016</p>
+		<p>&copy; 2019</p>
 		<div class="social">
 			<p><a href="https://www.facebook.com/verein.traumwerk/">Facebook</a></p>
 			<p><a href="https://twitter.com/TraumwerkGraz">Twitter</a></p>
